[gd_scene load_steps=8 format=3 uid="uid://dpy8jf0j4d68a"]

[ext_resource type="Script" uid="uid://d0v1pjumphh5f" path="res://world/LevelRuntime.gd" id="1_1"]
[ext_resource type="Script" uid="uid://2l6y5avswws" path="res://world/OptimizedSystemsRunner.gd" id="1_2"]
[ext_resource type="Script" uid="uid://dyyi1xigayg4e" path="res://world/DungeonTileMap.gd" id="1_8"]
[ext_resource type="Script" uid="uid://buba8cxpxoflq" path="res://integrations/twitch/CommandParser.gd" id="1_9"]
[ext_resource type="Script" uid="uid://dv4ofum64as5g" path="res://integrations/twitch/CommandBindings.gd" id="1_10"]
[ext_resource type="PackedScene" path="res://actors/player/Player.tscn" id="1_12"]
[ext_resource type="PackedScene" path="res://ui/Hotbar.tscn" id="1_13"]

[node name="LevelRuntime" type="Node"]
script = ExtResource("1_1")
systems_runner_path = NodePath("OptimizedSystemsRunner")
dungeon_tilemap_path = NodePath("DungeonTileMap")
command_parser_path = NodePath("CommandParser")
command_bindings_path = NodePath("CommandBindings")

[node name="Background" type="Polygon2D" parent="."]
z_index = -100
color = Color(0.3, 0.3, 0.3, 1)
polygon = PackedVector2Array(-10000, -10000, 10000, -10000, 10000, 10000, -10000, 10000)

[node name="OptimizedSystemsRunner" type="Node" parent="."]
script = ExtResource("1_2")

[node name="DungeonTileMap" type="TileMap" parent="."]
format = 2
script = ExtResource("1_8")

[node name="CommandParser" type="Node" parent="."]
script = ExtResource("1_9")

[node name="CommandBindings" type="Node" parent="."]
script = ExtResource("1_10")

[node name="OptimizedSpawner" parent="."]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
spawn_rate = 51.0
script = null

[node name="Player" parent="." instance=ExtResource("1_12")]

[node name="HUD" type="CanvasLayer" parent="."]
layer = 128

[node name="Hotbar" parent="HUD" instance=ExtResource("1_13")]
anchors_preset = 7

[node name="VFXLayer" type="Node2D" parent="."]
